Style: adjust gameBody height to prevent overflow when viewport height gets smaller

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,8 @@ footer {
 #gameContainer {
     display: flex;
     flex-direction: row;
-    height: 84vh;
+    height: auto;
+    min-height: 84vh;
 }
 
 #gameSidebar,
@@ -107,7 +108,6 @@ footer {
     height: auto;
     background-color: lightgreen;
     background: #fff url('../images/backgrounds/battleship-bg-op.webp') no-repeat center left;
-    height: 100%;
 }
 
 #player-message {
@@ -116,7 +116,7 @@ footer {
     min-height: 75px;
     border-radius: 10px;
     background-color: #000;
-    margin: 25px auto;
+    margin: 0 auto 40px auto;
     text-align: center;
     -moz-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(255, 255, 255, .4);
     -webkit-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(255, 255, 255, .4);
